--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "cross-env": "^5.2.0",
-    "nuxt": "^2.0.0"
+    "install": "^0.12.2",
+    "npm": "^6.5.0",
+    "nuxt": "^2.3.4"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
