--- a/package.json
+++ b/package.json
@@ -4,16 +4,11 @@
   "description": "My fantastic Nuxt.js project",
   "author": "Slawomir",
   "private": true,
-  "config": {
-    "nuxt": {
-      "host": "node-front-node-front.7e14.starter-us-west-2.openshiftapps.com",
-      "port": "8080"
-    }
-  },
+ 
   "scripts": {
-    "dev": "nuxt",
+    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
     "build": "nuxt build",
-    "start": "nuxt start",
+    "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate"
   },
   "dependencies": {
