--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "My fantastic Nuxt.js project",
   "author": "Slawomir",
   "private": true,
- 
+  "config": {
+    "nuxt": {
+      "port": "8000"
+    }
+  },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
     "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production node server/index.js",
+    "start": "nuxt start",
     "generate": "nuxt generate"
   },
   "dependencies": {
