--- a/package.json
+++ b/package.json
@@ -4,20 +4,17 @@
   "description": "My fantastic Nuxt.js project",
   "author": "Slawomir",
   "private": true,
-  "config": {
-    "nuxt": {
-      "port": "8000"
-    }
-  },
   "scripts": {
+    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
     "build": "nuxt build",
-    "start": "nuxt start",
+    "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "cross-env": "^5.2.0",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "express": "^4.16.4"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
