--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "author": "Troll",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+    "dev": "nuxt",
     "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production node server/index.js",
-    "generate": "nuxt generate"
+    "start": "nuxt start"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
