--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
     "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production node server/index.js",
-    "generate": "nuxt generate"
+    "start": "cross-env NODE_ENV=production node server/index.js --watch server"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
