--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node_front",
+  "name": "troll_front",
   "version": "1.0.0",
   "description": "front application",
   "author": "Troll",
@@ -7,26 +7,23 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
     "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production node server/index.js --watch server"
+    "start": "cross-env NODE_ENV=production node server/index.js",
+    "generate": "nuxt generate"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
-    "basic-auth": "^2.0.1",
     "body-parser": "^1.18.3",
     "bookshelf": "^0.14.2",
     "cookie-session": "^1.3.3",
     "cross-env": "^5.2.0",
-    "crypto-js": "^3.1.9-1",
     "dotenv": "^7.0.0",
     "express": "^4.16.3",
     "express-fingerprint": "^1.1.2",
-    "express-session": "^1.15.6",
     "knex": "^0.16.3",
     "mysql2": "^1.6.5",
     "nuxt": "^2.0.0",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0",
     "simple-encryptor": "^2.0.0",
     "vee-validate": "^2.2.2",
     "vue-cookie-law": "^1.10.0",
