--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "simple-encryptor": "^2.0.0",
     "vee-validate": "^2.2.2",
     "vue-cookie-law": "^1.10.0",
-    "vuetify": "^1.2.4"
+    "vuetify": "^1.2.4",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^1.11.0",
